# llm-sim

./: .coverage  .gitignore  CLAUDE.md  IMPLEMENTATION_REPORT.md  LOGGING_IMPROVEMENT_PLAN.md  README.md  SPATIAL_STATE_SERIALIZATION_FIX.md  config_llm_example.yaml  coverage.json  main.py  pyproject.toml
.specify/memory/: constitution.md
.specify/specs/: data-model.md  implementation-plan.md  quickstart.md  research.md  simulation-loop.md  tasks.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
dev/: ARCHITECTURE_REQUIREMENTS.md  CHANGELOG.md  CONFIGURATION_STATUS.md  FEATURES_ROADMAP.md  implementation_order.md  implementation_plan.md  obsolete_code_analysis.md  questions.md  state_manager_integration_plan.md  test_commands.md
docs/: AGENT_CREATION_GUIDE.md  COMPUTE_BUDGET_SIMULATION.md  MIGRATION.md  PHASE0_COMPLETE.md  PLATFORM_ARCHITECTURE.md  REALTIME_SIMULATION.md  SIMULATION_GUIDE.md  event-streaming.md
docs/patterns/: base_classes.md  creating_implementations.md  llm_pattern.md
examples/: basic_economic.yaml  event_stream_demo.py  extended_test.yaml  hybrid_simulation.yaml  llm_economic.yaml  quick_test.yaml  trading_simulation.yaml
examples/spatial/: README.md  epidemic_grid_config.yaml  geopolitics_config.yaml  supply_chain_config.yaml  supply_network.json  westeros.geojson
specs/004-new-feature-i/: ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-we-want-to/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
tests/: conftest.py
(+259 files in other folders)
